fix action spacing/border

--- a/style.css
+++ b/style.css
@@ -128,6 +128,9 @@ button {
     background-color: #3882F6;
     display: flex;
     justify-content: space-between;
+    padding: 30px 60px;
+    min-width: 800px;
+    border-radius: 5px;
     
 }
 
